--- a/s3-presenter/index.html
+++ b/s3-presenter/index.html
@@ -1,18 +1,16 @@
 <html>
-    <head>
-        <script src="jquery-3.5.1.min.js"></script>
-        <script src="main.js"></script>
-        <style>
-            html, body {
-                width: 100%;
-                height: 100%;
-                margin: 0;
-                padding: 0;
-                border: 0;
-            }
-        </style>
-    </head>
-    <body>
-        <div id="canvas"></div>
-    </body>
+
+<head>
+    <script type="text/javascript" src="jquery-3.5.1.min.js"></script>
+    <script type="text/javascript" src="main.js"></script>
+    <script type="text/javascript" src="slick/slick.min.js"></script>
+    <link rel="stylesheet" type="text/css" href="main.css" />
+    <link rel="stylesheet" type="text/css" href="slick/slick.css" />
+    <link rel="stylesheet" type="text/css" href="slick/slick-theme.css" />
+</head>
+
+<body>
+    <div id="canvas"></div>
+</body>
+
 </html>
